apps/mycroft/coordinator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycroft-coordinator
  namespace: mycroft
  labels:
    app: mycroft-coordinator
spec:
  type: ClusterIP
  selector:
    app: mycroft-coordinator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
