apps/mycroft/coordinator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycroft-coordinator
  namespace: mycroft
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mycroft.amer.dev
      secretName: mycroft-tls
  rules:
    - host: mycroft.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mycroft-coordinator
                port:
                  number: 8080
